objects/Section__c.object
<CustomObject>
    <fields>
        <fullName>Section_Frequency__c</fullName>
        <inlineHelpText>Which days will this Intervention Section meet each week?</inlineHelpText>
        <label>Section Frequency</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Section_Nickname__c</fullName>
        <inlineHelpText>If you would like, you can add a Section Nickname.</inlineHelpText>
        <label>Section Nickname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_Number__c</fullName>
        <inlineHelpText>Enter the section number. This field only displays in the Section Number field on the Section record. You can use it on reports.</inlineHelpText>
        <label>Section Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_RT__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Section RT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recursive lookup for groups</description>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Groups in Section</relationshipLabel>
        <relationshipName>Sections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_in_portal__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SkipDosage__c</fullName>
        <formula>Account_Program__r.Program__r.SkipDosage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skip Dosage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <inlineHelpText>What is the start date for this intervention Section?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student_Section_Active_Count__c</fullName>
        <label>Student Section Active Count</label>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Math</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Writing</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_Auto_Number__c</fullName>
        <displayFormat>Section - {00000}</displayFormat>
        <inlineHelpText>This number is used to create the Intervention Section Name. It cannot be changed.</inlineHelpText>
        <label>System Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Target_Dosage_Org_Goal__c</fullName>
        <formula>Program__r.Overall_Target_Dosage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This number is the Program&apos;s Target Dosage and is the recommended dosage.  You can modify this section&apos;s goal in the &quot;Target Dosage Section Goal (in mins)&quot; field.</inlineHelpText>
        <label>Target Dosage - Org Goal (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Dosage_Section_Goal__c</fullName>
        <inlineHelpText>What is the specific target dosage goal for this Intervention Section? It may be the same or different than the Program Target Dosage goal.</inlineHelpText>
        <label>Target Dosage - Section Goal (in mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <label>Teachers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Term_Identifier__c</fullName>
        <description>This field is ONLY for NYC.</description>
        <label>Term Identifier</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Time_Element__c.Picklist_Value__r.Name</field>
                <operation>equals</operation>
                <value>Year</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Sections</relationshipLabel>
        <relationshipName>Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Attendance__c</fullName>
        <label>Total Attendance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Average_Grade__c</fullName>
        <label>Total Average Grade</label>
        <summarizedField>Student_Section__c.Average_Section_Grade__c</summarizedField>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Grade_Value__c</fullName>
        <label>Total Grade Value</label>
        <summarizedField>Student_Section__c.Total_Grade_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Section_Grades__c</fullName>
        <label>Total Section Grades</label>
        <summarizedField>Student_Section__c.Count_Section_Grades__c</summarizedField>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Section or Standard Group or Custom Group</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Standard Group</fullName>
                </value>
                <value>
                    <fullName>Custom Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Section__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Section</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_Name__c</fullName>
        <description>Must map to a valid Year Name__c value.</description>
        <label>Year Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inactive_students__c</fullName>
        <label># inactive students</label>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines if the section is a group or not</description>
        <label>isGroup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isNeedActivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isNeedActivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Active_Students__c</fullName>
        <label># of Active Students</label>
        <summaryFilterItems>
            <field>Student_Section__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Consecutive_Days_without_Grades__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is updated nightly and keeps track of whether grades were entered in the gradebook for that day.</description>
        <inlineHelpText>This field is updated nightly and keeps track of whether grades were entered in the gradebook for that day.</inlineHelpText>
        <label># of Consecutive Days without Grades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Homework_Assignments__c</fullName>
        <description>System generated tally of number of homework assignments for the particular section</description>
        <inlineHelpText>System generated tally of number of homework assignments for the particular section</inlineHelpText>
        <label># of Homework Assignments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Homework_Completed__c</fullName>
        <description>System generated calculation of percent of homework that was completed in the particular section</description>
        <inlineHelpText>System generated calculation of percent of homework that was completed in the particular section</inlineHelpText>
        <label>% of Homework Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Late_Homework__c</fullName>
        <description>System generated tally of number of late homework assignments for the particular section</description>
        <inlineHelpText>System generated tally of number of late homework assignments for the particular section</inlineHelpText>
        <label># of Late Homework</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Missing_Homework__c</fullName>
        <description>System generated tally of number of missing homework assignments for the particular section</description>
        <inlineHelpText>System generated tally of number of missing homework assignments for the particular section</inlineHelpText>
        <label># of Missing Homework</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Students_Failing__c</fullName>
        <description>The percentage of students failing a section</description>
        <inlineHelpText>The percentage of students failing a section</inlineHelpText>
        <label>% Students Failing</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_Students__c</fullName>
        <label># of Students</label>
        <summaryForeignKey>Student_Section__c.Section__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Time_by_Medium_of_Instruction__c</fullName>
        <label>% of Time by Medium of Instruction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Section</label>
    <listViews>
        <fullName>Active_Curriculum_Sections</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Reference_Id__c</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Curriculum</value>
        </filters>
        <label>Active Curriculum Sections</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Reference_Id__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Intervention_Section</value>
        </filters>
        <label>Active Intervention Sections</label>
    </listViews>
    <listViews>
        <fullName>All_SchoolForce_Sections</fullName>
        <columns>Location__c</columns>
        <columns>Course__c</columns>
        <columns>NAME</columns>
        <columns>Year_Name__c</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Published,Section__c.Unpublished,Section__c.Schedule_Group,Section__c.Gradebook_Group</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Gradebook Sections</label>
    </listViews>
    <listViews>
        <fullName>All_Sections</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>In_After_School__c</columns>
        <columns>Section_Nickname__c</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Reference_Id__c</columns>
        <columns>Location__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Sections</label>
    </listViews>
    <listViews>
        <fullName>Edit_Section_Nickname_or_Section_Name</fullName>
        <columns>Auto_Name__c</columns>
        <columns>NAME</columns>
        <columns>Section_Nickname__c</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Intervention_Section</value>
        </filters>
        <label>Edit Section Nickname or Section Name</label>
    </listViews>
    <listViews>
        <fullName>Interventions_Sections</fullName>
        <columns>NAME</columns>
        <columns>In_After_School__c</columns>
        <columns>Active__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>of_Students__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Intervention_Section</value>
        </filters>
        <filters>
            <field>of_Students__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Interventions Sections with Students</label>
    </listViews>
    <listViews>
        <fullName>Interventions_Sections_no_students</fullName>
        <columns>NAME</columns>
        <columns>In_After_School__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Intervention_Section</value>
        </filters>
        <filters>
            <field>of_Students__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Interventions Sections without Students</label>
    </listViews>
    <listViews>
        <fullName>Interventions_Sections_w_Reporting_Prds</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Reporting_Period__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Intervention_Section</value>
        </filters>
        <filters>
            <field>Reporting_Period__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Interventions Sections w/Reporting Prds</label>
    </listViews>
    <listViews>
        <fullName>MIA_Gradebook_Sections</fullName>
        <columns>Location__c</columns>
        <columns>Course__c</columns>
        <columns>NAME</columns>
        <columns>Year_Name__c</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Section__c.Published,Section__c.Unpublished,Section__c.Schedule_Group,Section__c.Gradebook_Group</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Location__c</field>
            <operation>equals</operation>
            <value>Miami</value>
        </filters>
        <label>Miami Gradebook Sections</label>
        <sharedTo>
            <role>Admin</role>
            <role>CY_HQ</role>
            <role>Miami_Site_Admin</role>
            <role>Miami_Site_User</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Section_created_in_the_last_30_days</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>of_Active_Students__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Sections  created in the last 30 days</label>
    </listViews>
    <listViews>
        <fullName>Sections_deactivated_last_30_days</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>of_Active_Students__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Section_Exit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>Deactivated__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sections  deactivated  last 30 days</label>
    </listViews>
    <listViews>
        <fullName>Site_Intervention_Sections</fullName>
        <columns>Location__c</columns>
        <columns>Course__c</columns>
        <columns>NAME</columns>
        <columns>Year_Name__c</columns>
        <columns>School__c</columns>
        <columns>of_Students__c</columns>
        <columns>Active__c</columns>
        <columns>Auto_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Site Intervention Section</label>
        <sharedTo>
            <role>Admin</role>
            <role>CY_HQ</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sections</pluralLabel>
    <recordTypes>
        <fullName>Curriculum</fullName>
        <active>true</active>
        <label>Curriculum</label>
    </recordTypes>
    <recordTypes>
        <fullName>Gradebook_Group</fullName>
        <active>true</active>
        <description>Used for custom gradebook groups</description>
        <label>Gradebook Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intervention_Section</fullName>
        <active>true</active>
        <label>Intervention Section</label>
    </recordTypes>
    <recordTypes>
        <fullName>Published</fullName>
        <active>true</active>
        <description>Sections that have been Published and are Viewable by Standard Users</description>
        <label>Published</label>
    </recordTypes>
    <recordTypes>
        <fullName>Schedule_Group</fullName>
        <active>true</active>
        <description>Groups of Students Used for Scheduling Purposes</description>
        <label>Schedule Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unpublished</fullName>
        <active>true</active>
        <description>Unpublished Sections Used for Scheduler</description>
        <label>Unpublished</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_existing_School_Program</fullName>
        <active>true</active>
        <errorConditionFormula>Account_Program__r.Program__c &lt;&gt;  Program__c</errorConditionFormula>
        <errorMessage>You may not change the School Program field when cloning a section. If you want to create a new section, please go to the Section tab and create &quot;New.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deactivation_Error</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Section_RT__c &lt;&gt; &apos;Unpublished&apos;,
OR(AND( Active__c , OR(NOT(TEXT( Section_Exit_Reason__c) =&quot;&quot;),NOT(ISBLANK( Section_Exit_Date__c )))), 

AND(NOT(ISNEW()),Active__c = false, OR(TEXT( Section_Exit_Reason__c) =&quot;&quot;,ISBLANK( Section_Exit_Date__c )))))</errorConditionFormula>
        <errorMessage>Deactivation error: either Active with exit date/reason or inactive without exit date/reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exit_Date_cant_be_in_future</fullName>
        <active>true</active>
        <errorConditionFormula>Section_Exit_Date__c &gt; NOW()</errorConditionFormula>
        <errorMessage>Exit date can&apos;t be in future</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exit_reason_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Active__c),
Active__c = false,
 ISPICKVAL(Section_Exit_Reason__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Section_Exit_Reason__c</errorDisplayField>
        <errorMessage>Please select Exit Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Section_Exit_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISCHANGED(Active__c), NOT(Active__c), ISNULL(Section_Exit_Date__c))</errorConditionFormula>
        <errorDisplayField>Section_Exit_Date__c</errorDisplayField>
        <errorMessage>Section_Exit_Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Section_Start_End_Date</fullName>
        <active>true</active>
        <description>Section Start Date cannot be greater than the End Date</description>
        <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
        <errorMessage>Section Start Date cannot be greater than the End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Section_name_cannot_be_changed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISCHANGED(Name) &amp;&amp;
NOT(OR($Profile.Name != &quot;Int_Sys_Admin&quot;, $Profile.Name != &quot;System Administrator&quot; )))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Section name can&apos;t be modified.</errorMessage>
    </validationRules>
</CustomObject>