objects/Section__c/fields/Aperture_Integration__c.field-meta.xml
<CustomField>
    <fullName>Aperture_Integration__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If this box is checked your section will be integrated with the Aperture system, if it is unchecked it will NOT be integrated with the Aperture system.</inlineHelpText>
    <label>Aperture Integration</label>
    <type>Checkbox</type>
</CustomField>