objects/Section__c/fields/Exclude_From_Aperture_Integration__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Aperture_Integration__c</fullName>
    <formula>Program__r.Exclude_From_Aperture_Integration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude From Aperture Integration</label>
    <type>Checkbox</type>
</CustomField>