objects/Section__c/fields/First_words__c.field-meta.xml
<CustomField>
    <fullName>First_words__c</fullName>
    <formula>MID( Name , 1, 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First words</label>
    <type>Text</type>
</CustomField>