objects/Section__c/fields/Intervention_Primary_Staff_Title__c.field-meta.xml
<CustomField>
    <fullName>Intervention_Primary_Staff_Title__c</fullName>
    <formula>Intervention_Primary_Staff__r.Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intervention Primary Staff Title</label>
    <type>Text</type>
</CustomField>