objects/Section__c/fields/Number_of_sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_sessions__c</fullName>
    <label>Number of sessions</label>
    <summaryForeignKey>Intervention_Session__c.Section__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>