objects/Section__c/fields/Section_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Section_18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Section 18 digit ID</label>
    <type>Text</type>
</CustomField>