objects/Section__c/validationRules/Exit_Date_cant_be_in_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_Date_cant_be_in_future</fullName>
    <active>true</active>
    <errorConditionFormula>Section_Exit_Date__c &gt; NOW()</errorConditionFormula>
    <errorMessage>Exit date can&apos;t be in future</errorMessage>
</ValidationRule>