objects/Section__c/validationRules/Exit_reason_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Exit_reason_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Active__c),
Active__c = false,
 ISPICKVAL(Section_Exit_Reason__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>Section_Exit_Reason__c</errorDisplayField>
    <errorMessage>Please select Exit Reason</errorMessage>
</ValidationRule>