objects/Section__c/validationRules/Section_Exit_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Section_Exit_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Active__c), NOT(Active__c), ISNULL(Section_Exit_Date__c))</errorConditionFormula>
    <errorDisplayField>Section_Exit_Date__c</errorDisplayField>
    <errorMessage>Section_Exit_Date is required.</errorMessage>
</ValidationRule>