objects/Section__c/validationRules/Section_Start_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Section_Start_End_Date</fullName>
    <active>true</active>
    <description>Section Start Date cannot be greater than the End Date</description>
    <errorConditionFormula>Start_Date__c  &gt;  End_Date__c</errorConditionFormula>
    <errorMessage>Section Start Date cannot be greater than the End Date.</errorMessage>
</ValidationRule>