objects/Section__c/listViews/Active_Curriculum_Sections.listView-meta.xml
<ListView>
    <fullName>Active_Curriculum_Sections</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>of_Students__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Reference_Id__c</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Section__c.Curriculum</value>
    </filters>
    <label>Active Curriculum Sections</label>
</ListView>