objects/Section__c/listViews/All_SchoolForce_Sections.listView-meta.xml
<ListView>
    <fullName>All_SchoolForce_Sections</fullName>
    <columns>Location__c</columns>
    <columns>Course__c</columns>
    <columns>NAME</columns>
    <columns>Year_Name__c</columns>
    <columns>School__c</columns>
    <columns>of_Students__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Section__c.Published,Section__c.Unpublished,Section__c.Schedule_Group,Section__c.Gradebook_Group</value>
    </filters>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Gradebook Sections</label>
</ListView>